Module2/Assignments/2012111111/error.txt
assign.cpp: In function ‘int main()’:
assign.cpp:9:25: error: expected ‘;’ before ‘}’ token
    9 |    cout << a+b+c << endl
      |                         ^
      |                         ;
   10 | }
      | ~                        
